--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 .hero{
   max-width: 100%;
   height: auto;
-  background-image: url("/images/img5.jpg" );
+  background-image: url("../images/img5.jpg" );
   background-size: cover;
   background-repeat: no-repeat;
   padding: 40px;
